fixed styling for index pages. will figure out spacing in columns later

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,7 +28,7 @@
 
 .btn-default {
   float: left;
-  margin-right: 10px;
+  margin-right: 5px;
 
 
 
